name:                garbled-circuits
version:             0.1.0.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Brent Carmer
maintainer:          bcarmer@gmail.com
copyright:           2015
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.GarbledCircuits
                      ,Crypto.GarbledCircuits.Types
                      ,Crypto.GarbledCircuits.Util
                      ,Crypto.GarbledCircuits.Language
                      ,Crypto.GarbledCircuits.TruthTable
                      ,Crypto.GarbledCircuits.Encryption
                      ,Crypto.GarbledCircuits.GarbledGate
                      ,Crypto.GarbledCircuits.Eval
  build-depends:       base >=4.7 && <4.8
                      ,cereal
                      ,crypto-random
                      ,bytestring
                      ,cipher-aes
                      ,containers
                      ,mtl
                      ,network

  ghc-options:        -fwarn-incomplete-patterns
  default-language:    Haskell2010
  default-extensions:  CPP
  cpp-options:         -DDEBUG

test-suite test-garbled-circuits
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
                      ,examples/adder
  build-depends:       base >=4.7 && <4.8
                      ,garbled-circuits
                      ,crypto-random
                      ,test-framework
                      ,test-framework-quickcheck2
                      ,QuickCheck
                      ,containers

