name:                bit-and
version:             0.1.0.0
license:             Apache-2.0
author:              Brent Carmer
maintainer:          bcarmer@gmail.com
copyright:           2015
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10

executable bit-and-garbler.a
  default-language:    Haskell2010
  main-is:             Garbler.hs
  build-depends:       base >=4.7 && <4.8
                     , garbled-circuits

executable bit-and-evaluator.a
  default-language:    Haskell2010
  main-is:             Evaluator.hs
  build-depends:       base >=4.7 && <4.8
                     , garbled-circuits
